# Phoneix-logger

./: readme.md
logger/: build.gradle  gradle.properties
logger/src/main/cpp/: CMakeLists.txt  dateutil.cpp  file_utils.cpp  logger.cpp  mmap_logger.cpp
logger/src/main/cpp/include/: common.h  console_log.cpp  console_log.h  dateutil.h  file_utils.h  logger.h
logger/src/main/cpp/zstd/cmakebuild/: README.md
logger/src/main/cpp/zstd/cmakebuild/cmake/: CMakeLists.txt
logger/src/main/cpp/zstd/cmakebuild/cmake/lib/: CMakeLists.txt
logger/src/main/cpp/zstd/doc/: zstd_manual.html
logger/src/main/java/com/happiness/hiero/base/logger/: Constants.kt
logger/src/main/java/com/happiness/hiero/base/logger/base/: Logger.kt
logger/src/main/java/com/happiness/hiero/base/logger/core/: ALogUtils.kt  AppLogMgr.kt  JLogUtils.kt  LogcatHelper.kt  LoggerUtils.kt  PhoenixLogger.kt
logger/src/main/java/com/happiness/hiero/base/logger/interfaces/: ILogger.kt
logger/src/main/java/com/happiness/hiero/base/logger/utils/: FileLogHelper.kt
